--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,10 @@ body{
     background-color: hsl(50, 100%, 50%);
     border: .25vmin solid black;
 }
+
+#scoreboard{
+    color: white;
+    text-align:center;
+    align-items:start;
+    
+}
