--- a/css/styles.css
+++ b/css/styles.css
@@ -20,25 +20,39 @@ body{
 .movingdown{
     border-bottom-left-radius: 20px 20px;
     border-bottom-right-radius: 20px 20px;
+    background: url(../img/Eyes.png) center;
+    background-repeat: no-repeat;
+    background-size: 600px 600px;
 }
 
 .movingup{
     border-top-left-radius: 20px 20px;
     border-top-right-radius: 20px 20px;
+    background: url(../img/Eyes.png) center;
+    background-repeat: no-repeat;
+    background-size: 600px 600px;
 }
 
 .movingleft{
-    border-top-left-radius: 20px 20px;
     border-bottom-left-radius: 20px 20px;
+   border-bottom-right-radius: 20px 20px;
+    background: url(../img/Eyes.png) center;
+    background-repeat: no-repeat;
+    background-size: 600px 600px;
+    transform: rotate(90deg);
 }
 
 .movingright{
-    border-bottom-right-radius: 20px 20px;
-    border-top-right-radius: 20px 20px;
+  border-bottom-left-radius: 20px 20px;
+  border-bottom-right-radius: 20px 20px;
+  background: url(../img/Eyes.png) center;
+  background-repeat: no-repeat;
+  background-size: 600px 600px;
+  transform: rotate(270deg);
 }
 
 .snake{
-    background-color: hsl(200,100%,50%);
+    background-color: hsl(230, 95%, 30%);
     border: .25vmin solid black;
     box-shadow: 0 0 100px 15px #ffffff4f;
 }
@@ -78,10 +92,10 @@ body{
     background: url(../img/firefly.png) center;
     background-repeat: no-repeat;
     background-size: cover;
-    animation: wiggle 1s linear infinite;
-    animation-delay: 2s;
-    border-radius: 100px;
-    box-shadow: 0 0 100px 15px #ffff004f;
+    border-radius: 1000px;
+    filter: drop-shadow(7px 7px 7px #fff70d);
+        -webkit-filter: drop-shadow(1.5px 7px 7px #f4fc57);
+    /*box-shadow: 0 0 100px 20px #ffff004f; */
 }
 
 
